[tool.poetry]
name = "maison"
version = "2.0.0"
description = "Read settings from config files"
authors = ["Dom Batten <dominic.batten@googlemail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dbatten5/maison"
repository = "https://github.com/dbatten5/maison"
documentation = "https://maison.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
include = [
  { path = "tests", format = "sdist" }
]

[tool.poetry.urls]
Changelog = "https://github.com/dbatten5/maison/releases"

[tool.poetry.dependencies]
python = "^3.9.1"
click = "^8.0.1"
toml = "^0.10.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.0"
pydantic = "^2.8.2"
coverage = {extras = ["toml"], version = "^7.4.0"}
six = "^1.16.0"

[tool.poetry.group.dev.dependencies]
typeguard = "^4.1.5"
safety = "^2.3.5"
mypy = "^1.11.0"
black = "^24.8.0"
pre-commit = "^3.5.0"
pre-commit-hooks = "^4.0.1"
Pygments = "^2.18.0"
ruff = "^0.1.13"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.0.0"
sphinx-autobuild = ">=2024.4.16"
sphinx-click = ">=3.0.2"
myst-parser = "2.0.0"
furo = "^2023.9.10"

[tool.poetry.scripts]
maison = "maison.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["maison"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = ["toml"]
ignore_missing_imports = true

[tool.ruff]
src = ['src', 'tests']
line-length = 88
target-version = 'py38'

[tool.ruff.lint]
ignore = [
  'B019',
]
select = [
    'A',
    'ARG',
    'B',
    'B9',
    'BLE',
    'C',
    'C4',
    'D',
    'DTZ',
    'E',
    'F',
    'I',
    'N',
    'PIE',
    'PT',
    'PTH',
    'Q',
    'RET',
    'RUF',
    'S',
    'SIM',
    'SLF',
    'T10',
    'TCH',
    'UP',
    'W',
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['F401']
"tests/*" = [
    'S',
    'D102',
    'D212',
    'D415',
    'D205',
    'D104',
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.ruff.lint.isort]
force-single-line = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
