[project]
name = "maison"
version = "2.0.2"
description = "Read settings from config files"
authors = [
    { name = "Dom Batten", email = "dominic.batten@googlemail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<4.0"
keywords = [
    "maison",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "loguru>=0.7.3",
    "platformdirs>=4.3.8",
    "tomli>=2.2.1 ; python_full_version < '3.11'",
    "typer>=0.15.4",
    "typing-extensions>=4.13.2",
]

[dependency-groups]
dev = [
    "commitizen>=4.7.0",
    "nox>=2025.5.1",
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
    "ruff>=0.11.9",
    "bandit>=1.8.3",
    "pip-audit>=2.9.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pyright>=1.1.400",
    "pydantic>=2.11.9",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "sphinx>=7.4.7",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-tabs>=3.4.7",
    "sphinxcontrib-typer>=0.5.1",
]


[project.urls]
Homepage = "https://github.com/dbatten/maison"
Repository = "https://github.com/dbatten/maison"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
